--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
-#game div {
-  border: 1px solid black;
-  width: 15%;
-  height: 200px;
-  margin: 10px;
-  display: inline-block;
+body {
+  background: #8083c9;
+  margin: 0;
+}
+
+.tiles {
+  margin: 48px auto;
+  width: max-content;
+  display: grid;
+  grid-template-columns: repeat(6, 100px);
+  gap: 16px;
+}
+
+.tile {
+  height: 100px;
+  background: #111111;
+  border: 5px solid #444444;
+  cursor: pointer;
 }
